--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     // !! IMPORTANT !!
     // !! قم بوضع مفتاح API الخاص بك هنا !!
     // !! YOU MUST ADD YOUR OWN GEMINI API KEY HERE !!
-    const API_KEY = ""; // <--- أضف مفتاحك هنا
+    const API_KEY = "";AIzaSyBHYnm_zRLyWvNFicSmO4Ok_oIq0n-jAz8
     const API_URL = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent?key=${API_KEY}`;
     const REQUIRED_PPE = ["hairnet", "mask", "suit", "gloves", "shoes"];
 
