--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
     // --- API Configuration ---
     // The environment injects the key at runtime.
-    const apiKey = ""; 
+    const apiKey = "AIzaSyCERUAOuyMcHzhBGjrO8-TmEOkrERfxnQw"; 
     const REQUIRED_PPE = ["hairnet", "mask", "suit", "gloves", "shoes"];
 
     // --- Translations ---
